force-app/main/default/objects/RC_question_set__c/RC_question_set__c.object-meta.xml
<CustomObject>
    <label>RC_question_set</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>RC_Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RC_question_sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>