force-app/main/default/objects/RC_question_set__c/fields/question_title__c.field-meta.xml
<CustomField>
    <fullName>question_title__c</fullName>
    <label>question_title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>