force-app/main/default/objects/RC_question_set__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>option_1__c</columns>
    <columns>option_2__c</columns>
    <columns>option_3__c</columns>
    <columns>option_4__c</columns>
    <columns>question_correct_answer__c</columns>
    <columns>question_title__c</columns>
    <columns>question_difficulty__c</columns>
    <columns>question_category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>